tests/purs/passing/ReExportsExported.js
"use strict";

exports.a = require('../B').a;
