tests/purs/failing/UnsupportedFFICommonJSImports1.js
var cjsImports = require("some CJS module");

export var yes = cjsImports.yes;
export var no = cjsImports.no;
